<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.authenication.login.LoginActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/ic_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/UserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="32dp"
        android:text="@string/username"
        android:textColor="@color/color_text"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <EditText
        android:id="@+id/edtUserName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="12dp"
        android:paddingStart="16dp"
        android:layout_marginRight="72dp"
        android:background="@drawable/bg_edittext"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:text="a@gmail.com"
        android:singleLine="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserName"
        tools:ignore="Autofill,LabelFor,RtlSymmetry" />

    <TextView
        android:id="@+id/PassWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="12dp"
        android:text="@string/password"
        android:textColor="@color/color_text"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtUserName" />

    <EditText
        android:id="@+id/edtPassWord"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="72dp"
        android:paddingStart="12dp"
        android:text="123456"
        android:background="@drawable/bg_edittext"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PassWord"
        tools:ignore="Autofill,LabelFor,RtlSymmetry" />

    <TextView
        android:id="@+id/RemindPassWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="12dp"
        android:text="@string/remember_me"
        android:textColor="@color/color_text"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassWord" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/btnSwitch"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="72dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassWord"
        app:theme="@style/ColorSwitch" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="72dp"
        android:background="@drawable/bg_button"
        android:text="@string/login"
        android:textColor="@color/color_text_white"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSwitch" />

    <TextView
        android:id="@+id/Connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/you_can_also_login_with"
        android:textColor="@color/color_text"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="72dp"
        android:layout_marginLeft="72dp"
        android:id="@+id/contentLinearLayout"
        android:weightSum="3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Connection"
        tools:ignore="UselessLeaf">

        <Button
            android:layout_width="48dp"
            android:layout_weight="1"
            android:layout_height="65dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/facebook_button"
            tools:ignore="ButtonStyle" />

        <Button
            android:layout_width="48dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/twitter_button"
            tools:ignore="ButtonStyle" />

        <Button
            android:layout_width="48dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/google_plus_button"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_text"
        android:id="@+id/tvSignUp"
        android:text="@string/not_registered_yet_sign_up"
        app:layout_constraintTop_toBottomOf="@+id/contentLinearLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>